fixing contrast issues and clicking on whole nav item

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,20 +63,22 @@ nav {
 	margin: 0 auto;
 }
 nav ul li {
-	background-color: var(--brown);
+	background-color: var(--teracotta);
 	width: 100%;
 	text-align: center;
-	padding: 0.5em;
 }
 nav a{
-	color: white!important;
+	display: block;
+	padding: .5em;
+	width: 100%;
+	height: 100%;
 }
-nav ul li a:hover{
+/* nav ul li a:hover{
 	color: black!important;
-}
+} */
 nav ul li:hover {
 	background-color: rgb(214, 214, 214);
-	color: black;
+	color: black!important;
 	cursor: pointer;
 }
 
